Implemented spring security @PreAuthorize annotations to protected methods in the controller. Added Token & Client entities, services, and repos. Added a service in order to handle Client & Token authentication.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,13 @@
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=reviewdb
+
 review.maximum.versions=4
 review.poor.score=4
 review.sort.limit=10
-jwt.secret.key=WiZY+hzJXK5NUpwHgqUYhJHlgdIwXehVRPQEO27X+yo=
+
+delete.token.collection=deletetokens
+update.token.collection=updatetokens
+
+jwt.delete.pepper=WiZY+hzJXK5NUpwHgqUYhJHlgdIwXehVRPQEO27X+yo=
+jwt.update.pepper=aR+HXb4gLz7XHu5XJNNu4BzYrJVQejzaJPOEB/uWaig=
