Refactored Client object to User. Refactored services to work with generic (not function based) JWT's. Added KeyLocator to dynamically find JWT key during authentication.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,4 @@ update.token.collection=updatetokens
 
 jwt.delete.pepper=WiZY+hzJXK5NUpwHgqUYhJHlgdIwXehVRPQEO27X+yo=
 jwt.update.pepper=aR+HXb4gLz7XHu5XJNNu4BzYrJVQejzaJPOEB/uWaig=
+jwt.generic.pepper=UBPi80qiwnaq5bJPnSKeEAOK/+LubPVEdRVkYGShxOA=
