Added email property to review model. Added Gmail SMTP email functionality to send an email upon a successful review submission

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.config.import=optional:file:variables.env[.properties]
+
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=reviewdb
@@ -12,3 +14,10 @@ update.token.collection=updatetokens
 jwt.delete.pepper=WiZY+hzJXK5NUpwHgqUYhJHlgdIwXehVRPQEO27X+yo=
 jwt.update.pepper=aR+HXb4gLz7XHu5XJNNu4BzYrJVQejzaJPOEB/uWaig=
 jwt.generic.pepper=UBPi80qiwnaq5bJPnSKeEAOK/+LubPVEdRVkYGShxOA=
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=product.rating.v2soft@gmail.com
+spring.mail.password=${GMAIL_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
