--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,8 @@ jwt.delete.pepper=WiZY+hzJXK5NUpwHgqUYhJHlgdIwXehVRPQEO27X+yo=
 jwt.update.pepper=aR+HXb4gLz7XHu5XJNNu4BzYrJVQejzaJPOEB/uWaig=
 jwt.generic.pepper=UBPi80qiwnaq5bJPnSKeEAOK/+LubPVEdRVkYGShxOA=
 
+max.time.expired=10
+
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=product.rating.v2soft@gmail.com
